Added PageTracker functionaility, as well as landing page inital setup, and logo.

--- a/server/views/Book/edit.ejs
+++ b/server/views/Book/edit.ejs
@@ -18,6 +18,10 @@
                     <label for="genreTextField">Book Genre</label>
                     <input type="text" class="form-control" id="genreTextField" placeholder="Enter the Published year" name="Genre" value="<%= Book.Genre %>" required>
                 </div>
+                <div class="form-group"> 
+                    <label for="PageTrackerTextField">Page Tracker</label>
+                    <input type="number" class="form-control" id="PageTrackerTextField" placeholder="Enter the Page Number" name="PageTracker" value="<%= Book.PageTracker %>" required>
+                 </div>
                 <button class="btn btn-primary" type="submit">Submit
                 <i class="fas fa-edit"></i></button>  
                 <button class="btn btn-warning" type="submit">Cancel
