--- a/server/views/Partials/main_nav.ejs
+++ b/server/views/Partials/main_nav.ejs
@@ -1,29 +1,35 @@
 <!--NavBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">INFR3120 Project</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <% if(title=="Home") { %>
-              <a class="nav-link active" href="/home">
-            <% } else {%>
-              <a class="nav-link" href="/home">
-            <% } %>  
-            <i class="fa-solid fa-house-chimney-user"></i> Home</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="Books") { %>
-              <a class="nav-link active" href="/bookslist">
-            <% } else {%>
-              <a class="nav-link" href="/bookslist">
-            <% } %>  
-            <i class="fa-solid fa-book"></i> Books</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <!-- Logo and Project Name -->
+    <a class="navbar-brand d-flex align-items-center" href="/">
+      <img src="/images/logo1.png" alt="Logo" style="height: 60px; width: auto; margin-right: 10px;">
+      <span class="text-decoration-underline">Book Tracker</span>
+    </a>
+    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <% if(title == "Home") { %>
+            <a class="nav-link active" href="/home">
+          <% } else { %>
+            <a class="nav-link" href="/home">
+          <% } %>
+          <i class="fa-solid fa-house-chimney-user"></i> Home</a>
+        </li>
+        <li class="nav-item">
+          <% if(title == "Books") { %>
+            <a class="nav-link active" href="/bookslist">
+          <% } else { %>
+            <a class="nav-link" href="/bookslist">
+          <% } %>
+          <i class="fa-solid fa-book"></i> Books</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
