--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,25 +1,48 @@
-<%- include Partials/header.ejs %>
-<%- include Partials/main_nav.ejs %>
+<%- include('Partials/header') %>
+<%- include('Partials/main_nav') %>
 
-<div class="container bg-white mt-5 p-4">
-  <h1 class="text-center"><%= title %></h1> 
+<div class="container bg-white mt-4">
+  <h1 class="text-center"><%= title %></h1>
 
   <!-- Hero Section -->
   <div class="jumbotron text-center bg-white p-5">
     <p class="lead">Welcome to the <%= title %> Page!</p>
     <p>Track and manage your book collection effortlessly.</p>
     <a href="/bookslist/add" class="btn btn-primary" role="button">
-    <i class="fas fa-plus-circle"></i> Add Book
-</a>
-
+      <i class="fas fa-plus-circle"></i> Add Book
+    </a>
   </div>
 
-  <!-- Additional Info Section -->
-  <div class="row mt-4">
-    <div class="col text-center">
-      <p>To view books, click on "Books" in the navbar.</p>
+  <!-- displays Active Books  List -->
+  <div class="container mt-5">
+    <h2 class="text-center">Active Books</h2>
+    <table class="table table-bordered table-striped table-hover mt-3">
+      <thead>
+        <tr>
+          <th class="text-center">Title</th>
+          <th class="text-center">Author</th>
+          <th class="text-center">Genre</th>
+          <th class="text-center">Page Tracker</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% BookList.forEach((book) => { %>
+        <tr>
+          <td class="text-center"><%= book.Title %></td>
+          <td class="text-center"><%= book.Author %></td>
+          <td class="text-center"><%= book.Genre %></td>
+          <td class="text-center"><%= book.PageTracker %></td>
+        </tr>
+        <% }) %>
+      </tbody>
+    </table>
+    
+    <!-- Additional Info Section -->
+    <div class="row mt-4">
+      <div class="col text-center">
+        <p>To view all books and edit, click on "Books" in the navbar.</p>
+      </div>
     </div>
   </div>
-</div>
 
-<%- include Partials/footer.ejs %>
+<%- include('Partials/footer') %>
